<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Globale Übersetzung -->
    <string name="app_name">Zeiterfassung</string>
    
    <!-- Startbildschirm -->
    <string name="lbl_start_time">Startzeit</string>
    <string name="lbl_end_time">Endzeit</string>
    <string name="cmd_start">Starten</string>
    <string name="cmd_end">Beenden</string>
    <!-- Ausflistung -->
    <string name="col_start">Startzeit</string>
    <string name="col_end">Endzeit</string>
    <!-- Menüs -->
    <!-- Startbildschirm -->
    <string name="opt_list_long">Liste der Einträge</string>
    <string name="opt_list_short">Liste</string>
    <!-- Auflistung -->
    <string name="ctx_edit">Bearbeiten</string>
    <string name="ctx_delete">Löschen</string>
    <string name="ctx_export">CSV Export</string>
    <string name="dlg_export_title">Export . . .</string>
    <string name="dlg_export_message">Daten werden exportiert . . .</string>
    <!-- Bearbeitung -->
    <string name="opt_save_short">Speichern</string>
    <string name="opt_save_long">Eintrag speichern</string>
    <string name="opt_cancel_short">Abbrechen</string>
    <string name="opt_cancel_long">Bearbeitung abbrechen</string>
    <string name="opt_delete_short">Löschen</string>
    <string name="opt_delete_long">Eintrag löschen</string>
    <!-- Dialoge -->
    <string name="dlg_confirm_title">Löschbestätigung</string>
    <string name="dlg_confirm_message">Wollen Sie den Eintrag wirklich löschen?</string>
    <string name="dlg_cancel">Abbrechen</string>
    <string name="dlg_delete">Löschen</string>

</resources>